--- a/.classpath
+++ b/.classpath
@@ -7,5 +7,7 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="lib" path="C:/Users/Felipe/Documents/JARs/mysql-connector-java-8.0.17.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Felipe/Documents/JARs/c3p0-0.9.5.4.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Felipe/Documents/JARs/mchange-commons-java-0.2.16.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
